# crewai_sql

./: .env.example  .gitignore  README.md  pyproject.toml  sql-review-crewai.md
sql/: 01_simple_select.sql  02_join_aggregation.sql  03_cte_window.sql  04_antipattern_select_star.sql  05_syntax_error.sql  unvalid.sql
sql/nested/: 06_subquery.sql
src/sql_review_crew/: config.py  crew_pipeline.py  db_tools.py  main.py  models.py  reporting.py  sql_scanner.py
